Add unnecessary Android escape inspection for Compose resources
Detects \', \", \@, \? escapes that are Android-specific and not
needed in Compose Multiplatform resources. Provides quick fixes
to remove individual or all unnecessary escapes.

--- a/src/main/resources/inspectionDescriptions/ComposeResourceArgument.html
+++ b/src/main/resources/inspectionDescriptions/ComposeResourceArgument.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
 <body>
 Reports mismatches between the number of format arguments passed to
 <code>stringResource()</code> or <code>pluralStringResource()</code> and the number of
