--- a/src/main/resources/inspectionDescriptions/UnusedComposeResource.html
+++ b/src/main/resources/inspectionDescriptions/UnusedComposeResource.html
@@ -1,9 +1,8 @@
-<html>
+<html lang="en">
 <body>
 Reports string, plural, and array resources defined in Compose Multiplatform XML files
 that are not referenced anywhere in the project's Kotlin code.
 <p>
-    Unused resources increase bundle size and make resource files harder to maintain.
     This inspection searches the project for references matching the resource's
     generated accessor (e.g., <code>Res.string.greeting</code>) and highlights
     resources with no usages found.
